--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,18 @@
+
     body {
     width:40%;
     position: relative;
-    background-image: url(../images/background.jpg);
-    position: absolute;
-  left: 35%;
-  margin-left: -50px;
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255, 0.1));
+    margin-left: auto;
+  margin-right: auto;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  
 }
+#content {
+    box-shadow:2px 3px 5px #999;
+}
+
 h1 {
     float: left;
     background-color: rgb(250, 144, 4);
@@ -13,10 +20,10 @@ h1 {
     width: 100%;
     overflow: hidden;
     font-family: 'Londrina Shadow', cursive;
-margin-bottom: 0.5px;
-margin-top: 10px;
+margin-bottom: 0px;
+margin-top: 0px;
 padding-bottom: 2px;
-font-size: 60px;
+font-size: 72px;
 text-align: center;
 font-weight: bolder;
 }
@@ -26,13 +33,14 @@ background-image: linear-gradient(rgb(250, 144, 4), rgb(255, 166, 0));
 color: rgb(0, 0, 0);
 width: 100%;
 padding-bottom: 60px;
-font-family: 'Londrina Shadow', cursive;
+font-family: Georgia, 'Times New Roman', Times, serif;
 font-weight: bolder;
 font-size: 24px;
-/* font-kerning: 20px; */
 }
 ul {
     padding-left: 10px;
+    padding-right: 10px;
+
 }
 #ranNumb {
     width: 100%;
@@ -62,39 +70,40 @@ ul {
   }
   #scoreboard {
       width: 90%;
-      height: 78%;
+      height: 100%;
       background-color: rgb(255, 166, 0);
-      /* margin-left:5%; */
       display: inline-block;
-      margin-top:0px;
-      padding-top: 40px;
-      /* padding-right: 40px; */
+      margin: auto;
       padding-left: 10%;
       font-family: 'Londrina Shadow', cursive;
       color: black;
       font-weight: bolder;
-      font-size: 32px;
+      font-size: 40px;
+  }
+  #wins, #loss #standing {
+      margin: auto;
   }
 #gems {
-    float: left;
-padding-left:17px;
-border: 5px solid black;
+    text-align:center;
+    border:solid 10px black;
+
 }
 #gems input {
-width: 22%;
-height: 150px;
+width: 24%;
+height: 250px;
 object-fit: fill;
-padding-left: 5px;  
+margin-left: auto;
+margin-right: auto;
+  
 }
-#bottom {
-    margin-top: 150px;
-}
+
 #bottom p {
     width: 100%;
     background-color: rgb(250, 144, 4);
     text-align: center;
     font-family: 'Geostar Fill', cursive;
     font-size: 30px;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 #score {
@@ -110,3 +119,15 @@ font-family: 'Geostar Fill', cursive;
 audio { 
     display:none;
  }
+ @media only screen and (min-width:1200px) {
+    html {
+        height: 100%;
+    }    
+ }
+ @media only screen and (max-width: 1200px) {
+    body {
+        width:90%;
+        height: 100%;
+
+    }
+  }
